<resources>
    <string name="app_name">ListViewResourcesArrays</string>
    <string name="nome">Name</string>
    <string name="empresa">Company</string>
    <string name="limpar">Clear</string>
    <string name="salvar">Save</string>
    <string name="nome_cargo">Job Title</string>
    <string name="nome_empresa">Company Name</string>
    <string name="as_entrada_foram_apagadas">The entries have been cleared.</string>
    <string name="faltou_nome">Missing name.</string>
    <string name="faltou_empresa">Missing company.</string>
    <string name="nome_valor">"Name: "</string>
    <string name="empresa_valor">"Company: "</string>
    <string name="possui_indicacao">"Has Referral "</string>
    <string name="indicacao_valor">"Referral: "</string>
    <string name="pessoaJ">Contractor</string>
    <string name="pessoaF">Full-time</string>
    <string name="regime_contratacao_valor">"Employment Type: "</string>
    <string name="favor_selecionar_regime">Please select an employment type.</string>
    <string name="escolaridade">Education Level</string>
    <string name="faixa_salarial">Salary Range</string>
    <string name="menor_que_5"><![CDATA[<$5,000]]></string>
    <string name="entre_5_e_10"><![CDATA[>$5,000 && < $10,000]]></string>
    <string name="maior_que_10"><![CDATA[>$10,000]]></string>
    <string name="com_indicacao">With referral.</string>
    <string name="sem_indicacao">Without referral.</string>
    <string name="logo_do_projeto">"Project Logo. "</string>
    <string name="autoria_nome">Author: Lucas Moraes</string>
    <string name="autoria_curso">JAVA Specialization</string>
    <string name="autoria_email">kkoozzmmoo@gmail.com</string>
    <string name="autoria_descricao">"Job application tracking app. "</string>
    <string name="autoria_nome_faculdade">"Federal University of Technology - Paraná. "</string>
    <string name="autoria_logo_faculdade">"University Logo. "</string>
    <string name="sobre">About</string>
    <string name="controle_de_candidaturas">Application Tracking</string>
    <string name="adicionar">Add</string>
    <string name="spinner_sem_valores">Spinner without values.</string>
    <string name="nova_candidatura">New Application</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="editar_candidatura">Edit Application</string>
    <string name="sugerir_tipo">Suggest type</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmar">Confirm</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deletar_confirmar">Do you want to delete?</string>
    <string name="erro_ao_inserir">Error trying to insert</string>
    <string name="erro_ao_editar">Error trying to update</string>
    <string name="erro_ao_excluir">Error trying to delete</string>
</resources>